AM_CPPFLAGS = -Wall $(CCRTP_CFLAGS) $(XML2_CFLAGS) -I$(top_srcdir)/src

noinst_LIBRARIES = libpresence.a

libpresence_a_SOURCES =\
	buddy.cpp\
	pidf_body.cpp\
	presence_dialog.cpp\
	presence_epa.cpp\
	presence_state.cpp\
	presence_subscription.cpp\
	buddy.h\
	pidf_body.h\
	presence_dialog.h\
	presence_epa.h\
	presence_state.h\
	presence_subscription.h
